--- a/nextadmin/app/ui/clientDashboard/navbar/navbar.module.css
+++ b/nextadmin/app/ui/clientDashboard/navbar/navbar.module.css
@@ -27,7 +27,17 @@
   padding: 10px;
   border-radius: 10px;
 }
+.link {
+  color: #fff;
+  text-decoration: none;
+  margin: 0 10px;
+  font-size: 16px;
+  transition: color 0.3s ease;
+}
 
+.link:hover {
+  color: #ddd;
+}
 .input {
   background-color: transparent;
   border: none;
